apps/monitoring/extra/ingress.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: custom-domain-gateway
      namespace: envoy
      sectionName: https-monitoring
  hostnames:
    - "monitoring.tryy3.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: monitoring-kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
